EPMRPP-69201 || align post link issue fields

--- a/app/src/pages/inside/stepPage/modals/postIssueModal/rallyCredentials/rallyCredentials.scss
+++ b/app/src/pages/inside/stepPage/modals/postIssueModal/rallyCredentials/rallyCredentials.scss
@@ -33,9 +33,11 @@
   padding-right: 30px;
   padding-top: 5px;
   &.dark-view {
-    min-width: 140px;
+    min-width: 160px;
+    width: 160px;
     text-align: left;
-    padding: 0 36px 0 10px;
+    margin-right: 16px;
+    padding: 0;
     color: $COLOR--dirty-gray;
   }
 }
